--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <%- style %>
     <link rel = "stylesheet" href = "/css/style.css">
     <title>
 
@@ -15,6 +16,8 @@
     <%- body %>
 
     <%- include('_footer'); -%>
+
+    <%- script %>
     
 </body>
 
