learn manual auth

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,5 +1,16 @@
-<link rel = "stylesheet" href = "/css/user_style.css">
+<link rel="stylesheet" href="/css/user_style.css">
 
-        <h1>
-            hello <%= title %>
-        </h1>
+<h1>
+    hello <%= title %>
+</h1>
+
+<p>
+    <%= user.name %>
+</p>
+<p>
+    <%= user.email %>
+</p>
+
+<!-- <form action="/users/sign-out" method="post">
+<input type = "submit" value = "sign-out">
+</form> -->
