--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,10 @@
+
+<link rel = "stylesheet" href = "/css/footer_style.css">
+
 <footer>
-    <p> footer section</p>
+
+    <div id = "footer-inner-box">
+        <h3>Made by Rick Astley</h3>
+    </div>
+
 </footer>
