--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,9 @@
 
     <%- include('_header'); -%>
 
-    <%- body %>
+    <main id = "layout-main">
+        <%- body %>
+    </main>
 
     <%- include('_footer'); -%>
 
