--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,35 @@
+<h1>
+    hello <%= title %>
+</h1>
 
-    <h1>
-        hello <%= title %>
-    </h1>
-
-    
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <% if(locals.user){%>
+        <form action="/posts/create" id="post-form" method="POST">
+            <textarea name="content" cols="30" rows="10" placeholder="Type your post here"></textarea>
+            <input type="submit" value="Post">
+        </form>
+        <% } %>
+            <ul>
+                <% for(post of posts){%>
+                    <li>
+                        <p>
+                            <%= post.content%>
+                                <br>
+                                <small>
+                                    <%= post.user.name%>
+                                </small>
+                        </p>
+                        <div class = "post-comments">
+                            <% if(locals.user) {%>
+                                <form action = "/comments/create" method = "POST">
+                                    <input type = "text" name = "content" placeholder="Type here to add comment...">
+                                    <input type = "hidden" name = "post" value = "<%= post._id%>">
+                                    <input type = "submit" value = "Add Comment">
+                                </form> 
+                                <% } %>
+                        </div>
+                    </li>
+                    <%}%>
+            </ul>
+</section>
