--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <h4>Posts</h4>
     <% if(locals.user){%>
         <form action="/posts/create" id="post-form" method="POST">
-            <textarea name="content" cols="30" rows="10" placeholder="Type your post here"></textarea>
+            <textarea name="content" cols="30" rows="10" placeholder="Type your post here" required></textarea>
             <input type="submit" value="Post">
         </form>
         <% } %>
@@ -14,21 +14,40 @@
                 <% for(post of posts){%>
                     <li>
                         <p>
+                            <small>
+                                <a href="/posts/destroy/<%= post.id %>">Delete</a>
+                            </small>
+                        </p>
+                        <p>
                             <%= post.content%>
                                 <br>
                                 <small>
                                     <%= post.user.name%>
                                 </small>
                         </p>
-                        <div class = "post-comments">
+                        <div class="post-comments">
                             <% if(locals.user) {%>
-                                <form action = "/comments/create" method = "POST">
-                                    <input type = "text" name = "content" placeholder="Type here to add comment...">
-                                    <input type = "hidden" name = "post" value = "<%= post._id%>">
-                                    <input type = "submit" value = "Add Comment">
-                                </form> 
+                                <form action="/comments/create" method="POST">
+                                    <input type="text" name="content" placeholder="Type here to add comment..."
+                                        required>
+                                    <input type="hidden" name="post" value="<%= post._id%>">
+                                    <input type="submit" value="Add Comment">
+                                </form>
                                 <% } %>
-                        </div>
+
+                                    <div class="post-comments-list">
+                                        <ul id="post-comment-<%= post._id%>">
+                                            <% for (comment of post.comments){%>
+                                                <p>
+                                                    <%= comment.content %>
+                                                        <br>
+                                                        <small>
+                                                            <%= comment.user.name %>
+                                                        </small>
+                                                </p>
+                                                <%}%>
+                                        </ul>
+                                    </div>
                     </li>
                     <%}%>
             </ul>
