--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,5 +4,5 @@
             hello <%= title %>
         </h1>
 
-        <p><%= user.name%></p>
-        <p><%= user.email%></p>
+        <p><%= profile_user.name%></p>
+        <p><%= profile_user.email%></p>
