add update user profile

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,5 +4,15 @@
             hello <%= title %>
         </h1>
 
-        <p><%= profile_user.name%></p>
-        <p><%= profile_user.email%></p>
+
+        <% if(user.id == profile_user.id) {%>
+            <!--The user match, show update form -->
+            <form action = "/users/update/<%=profile_user.id%>" method = "POST">
+                <input type = "text" name = "name" placeholder="UpdatedName" value = "<%=profile_user.name%>">
+                <input type = "email" name = "email" placeholder="UpdatedEmail" value = "<%=profile_user.email%>">
+                <input type ="submit" value = "Update">
+            </form>
+        <% }else{ %>
+            <p><%= profile_user.name%></p>
+            <p><%= profile_user.email%></p>
+        <% } %>
