--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,68 +1,74 @@
+
+<link rel = "stylesheet" href="/css/home.css">
+
 <h1>
     hello <%= title %>
 </h1>
 
-<section id="feed-posts">
-    <h4>Posts</h4>
-    <% if(locals.user){%>
-        <form action="/posts/create" id="post-form" method="POST">
-            <textarea name="content" cols="30" rows="10" placeholder="Type your post here" required></textarea>
-            <input type="submit" value="Post">
-        </form>
+<div id = "home-container">
+    
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <% if(locals.user){%>
+            <form action="/posts/create" id="post-form" method="POST">
+                <textarea name="content" cols="30" rows="10" placeholder="Type your post here" required></textarea>
+                <input type="submit" value="Post">
+            </form>
+            <% } %>
+                <ul>
+                    <% for(post of posts){%>
+                        <li>
+                            <p>
+                                <% if((locals.user) && (locals.user.id==post.user.id)){%>
+                                    <small>
+                                        <a href="/posts/destroy/<%= post.id %>">Delete</a>
+                                    </small>
+                                    <% } %>
+                                        <%= post.content%>
+                                            <br>
+                                            <small>
+                                                <%= post.user.name%>
+                                            </small>
+                            </p>
+                            <div class="post-comments">
+                                <% if(locals.user) {%>
+                                    <form action="/comments/create" method="POST">
+                                        <input type="text" name="content" placeholder="Type here to add comment..."
+                                            required>
+                                        <input type="hidden" name="post" value="<%= post._id%>">
+                                        <input type="submit" value="Add Comment">
+                                    </form>
+                                    <% } %>
+    
+                                        <div class="post-comments-list">
+                                            <ul id="post-comment-<%= post._id%>">
+                                                <% for (comment of post.comments){%>
+                                                    <% if(locals.user && (locals.user.id==comment.user.id)){%>
+                                                        <small>
+                                                            <a href="/comments/destroy/<%= comment.id %>">Delete Comm</a>
+                                                        </small>
+                                                        <% }%>
+                                                            <p>
+                                                                <%= comment.content %>
+                                                                    <br>
+                                                                    <small>
+                                                                        <%= comment.user.name %>
+                                                                    </small>
+                                                            </p>
+                                                            <%}%>
+                                            </ul>
+                                        </div>
+                        </li>
+                        <%}%>
+                </ul>
+    </section>
+    
+    <section id = "user-friends">
+        <h4>Friends</h4>
+        <% for (u of all_users) {%>
+            <p>
+                <a href = "/users/profile/<%= u.id %>"><%=u.name%></a>
+            </p>
         <% } %>
-            <ul>
-                <% for(post of posts){%>
-                    <li>
-                        <p>
-                            <% if((locals.user) && (locals.user.id==post.user.id)){%>
-                                <small>
-                                    <a href="/posts/destroy/<%= post.id %>">Delete</a>
-                                </small>
-                                <% } %>
-                                    <%= post.content%>
-                                        <br>
-                                        <small>
-                                            <%= post.user.name%>
-                                        </small>
-                        </p>
-                        <div class="post-comments">
-                            <% if(locals.user) {%>
-                                <form action="/comments/create" method="POST">
-                                    <input type="text" name="content" placeholder="Type here to add comment..."
-                                        required>
-                                    <input type="hidden" name="post" value="<%= post._id%>">
-                                    <input type="submit" value="Add Comment">
-                                </form>
-                                <% } %>
-
-                                    <div class="post-comments-list">
-                                        <ul id="post-comment-<%= post._id%>">
-                                            <% for (comment of post.comments){%>
-                                                <% if(locals.user && (locals.user.id==comment.user.id)){%>
-                                                    <small>
-                                                        <a href="/comments/destroy/<%= comment.id %>">Delete Comm</a>
-                                                    </small>
-                                                    <% }%>
-                                                        <p>
-                                                            <%= comment.content %>
-                                                                <br>
-                                                                <small>
-                                                                    <%= comment.user.name %>
-                                                                </small>
-                                                        </p>
-                                                        <%}%>
-                                        </ul>
-                                    </div>
-                    </li>
-                    <%}%>
-            </ul>
-</section>
-
-<section id = "user-friends">
-    <h4>Friends</h4>
-    <% for (u of all_users) {%>
-        <p>
-            <a href = "/users/profile/<%= u.id %>"><%=u.name%></a>
-        </p>
-    <% } %>
-</section>
+    </section>
+</div>
