--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,25 +2,55 @@
 
 <head>
     <%- style %>
-    <link rel = "stylesheet" href = "/css/style.css">
-    <title>
-
-        <%= title %>
-    </title>
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+        
+        <title>
+            <%= title %>
+        </title>
 </head>
 
 <body>
 
     <%- include('_header'); -%>
 
-    <main id = "layout-main">
-        <%- body %>
-    </main>
+        <main id="layout-main">
+            <%- body %>
+        </main>
 
-    <%- include('_footer'); -%>
+        <%- include('_footer'); -%>
 
-    <%- script %>
-    
+        <%- script %>
+
+        <% if(flash.success && flash.success.length> 0){%>
+
+            <script>
+                new Noty({
+                    theme:'relax',
+                    text:'<%= flash.success %>',
+                    type:'success',
+                    layout:'topRight',
+                    timeout:1500
+                }).show();
+            </script>
+
+        <% }else if(flash.error && flash.error.length>0 ){ %>
+
+            <script>
+
+                new Noty({
+                    theme:'relax',
+                    text:"<%= flash.error %>",
+                    type:'error',
+                    layout:'topRight',
+                    timeout:1500
+                }).show();
+                
+            </script>
+
+        <% } %>
+
+
+            
 </body>
-
-</html>
