--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,52 +15,13 @@
                 <input type="submit" value="Post">
             </form>
             <% } %>
+            <div id = "post-list-container">
                 <ul>
                     <% for(post of posts){%>
-                        <li>
-                            <p>
-                                <% if((locals.user) && (locals.user.id==post.user.id)){%>
-                                    <small>
-                                        <a href="/posts/destroy/<%= post.id %>">Delete</a>
-                                    </small>
-                                    <% } %>
-                                        <%= post.content%>
-                                            <br>
-                                            <small>
-                                                <%= post.user.name%>
-                                            </small>
-                            </p>
-                            <div class="post-comments">
-                                <% if(locals.user) {%>
-                                    <form action="/comments/create" method="POST">
-                                        <input type="text" name="content" placeholder="Type here to add comment..."
-                                            required>
-                                        <input type="hidden" name="post" value="<%= post._id%>">
-                                        <input type="submit" value="Add Comment">
-                                    </form>
-                                    <% } %>
-    
-                                        <div class="post-comments-list">
-                                            <ul id="post-comment-<%= post._id%>">
-                                                <% for (comment of post.comments){%>
-                                                    <% if(locals.user && (locals.user.id==comment.user.id)){%>
-                                                        <small>
-                                                            <a href="/comments/destroy/<%= comment.id %>">Delete Comm</a>
-                                                        </small>
-                                                        <% }%>
-                                                            <p>
-                                                                <%= comment.content %>
-                                                                    <br>
-                                                                    <small>
-                                                                        <%= comment.user.name %>
-                                                                    </small>
-                                                            </p>
-                                                            <%}%>
-                                            </ul>
-                                        </div>
-                        </li>
-                        <%}%>
+                        <%-include('_post')-%>
+                    <%}%>
                 </ul>
+            </div>
     </section>
     
     <section id = "user-friends">
@@ -71,4 +32,6 @@
             </p>
         <% } %>
     </section>
+
+    <script src = "/js/home_posts.js"></script>
 </div>
