--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,15 +1,12 @@
 <link rel = "stylesheet" href = "/css/user_style.css">
 
-        <h1>
-            hello <%= title %>
-        </h1>
-
-
+<img src = "<%= user.avatar%>" alt = "<%=user.name%>" width="100">
         <% if(user.id == profile_user.id) {%>
             <!--The user match, show update form -->
-            <form action = "/users/update/<%=profile_user.id%>" method = "POST">
+            <form action = "/users/update/<%=profile_user.id%>" enctype = "multipart/form-data" method = "POST">
                 <input type = "text" name = "name" placeholder="UpdatedName" value = "<%=profile_user.name%>">
                 <input type = "email" name = "email" placeholder="UpdatedEmail" value = "<%=profile_user.email%>">
+                <input type = "file" name = "avatar" placeholder = "Profile Picture" >
                 <input type ="submit" value = "Update">
             </form>
         <% }else{ %>
